<resources>
    <string name="app_name">Food Share</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="take_picture">Take Picture</string>
    <string name="save">Save</string>
    <string name="food_share">Food Share</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="age">Age</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_yet_click_here">Don\'t have an account yet? Click here!</string>
    <string name="back">Back</string>
    <string-array name="categories">
        <item>Cream Cheese</item>
        <item>Pasta</item>
        <item>Milk</item>
        <item>Sugar</item>
    </string-array>
    <string-array name="units">
        <item>Kilo</item>
        <item>Gram</item>
        <item>Units</item>
        <item>Liter</item>

    </string-array>
</resources>
