<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.Login">

    <com.google.android.material.imageview.ShapeableImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_margin="32dp"
        android:src="@drawable/foodshare_logo" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/appNameTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_marginVertical="8dp"
        android:text="@string/food_share"
        android:textColor="#009688"
        android:textSize="32sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/emailTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/email"
            android:textColor="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/firstNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/first_name"
            android:textColor="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/firstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/lastNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/last_name"
            android:textColor="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/birthDayTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/age"
            android:textColor="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/birthDayET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:layout_marginHorizontal="30dp" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/passwordTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:text="@string/password"
            android:textColor="@color/colorAccent" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            android:inputType="textPassword"
            android:paddingHorizontal="12dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="30dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/custom_btn"
            android:text="@string/login"
            android:textColor="#ffff"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/creatAccountTV"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/don_t_have_an_account_yet_click_here"

                />
        </LinearLayout>
    </LinearLayout>


</LinearLayout>